src/objects/ADvendio__Commitment__c.object
<CustomObject>
    <description>Hold all relevant Information for an Contract between Advertiser/Agencies and an Publisher according Discounts and Rebate in Kind. For further Information please have a look at our Wiki under https://advendio.atlassian.net/wiki/display/SO/Knowledge+Base .</description>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked this commitment is active and relevant.</description>
        <inlineHelpText>If checked this commitment is active and relevant.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserAgencyRelation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please pick the Advertiser Agency relation if applicable.</description>
        <inlineHelpText>Please pick the Advertiser Agency relation if applicable.</inlineHelpText>
        <label>Advertiser Agency Relation</label>
        <referenceTo>ADvendio__Advertiser_Agency_relation__c</referenceTo>
        <relationshipLabel>Commitments</relationshipLabel>
        <relationshipName>Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Advertiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please pick the advertiser if applicable.</description>
        <inlineHelpText>Please pick the advertiser if applicable.</inlineHelpText>
        <label>Advertiser</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commitments</relationshipLabel>
        <relationshipName>Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please pick the agency if applicable.</description>
        <inlineHelpText>Please pick the agency if applicable.</inlineHelpText>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commitments (Agency)</relationshipLabel>
        <relationshipName>Commitments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set this record has been approved.</description>
        <inlineHelpText>If set this record has been approved.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ClosingDate__c</fullName>
        <description>Date when this commitment has been signed and closed.</description>
        <inlineHelpText>Date when this commitment has been signed and closed.</inlineHelpText>
        <label>Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__Status__c</fullName>
        <description>Status describes if the Commitment phase can be changed to any values.</description>
        <inlineHelpText>Please pick a status.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>under negotiation</fullName>
                </value>
                <value>
                    <fullName>closed - won</fullName>
                </value>
                <value>
                    <fullName>closed - lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ValidFrom__c</fullName>
        <description>First day that the commitment is valid if activated.</description>
        <inlineHelpText>First day that the commitment is valid if activated.</inlineHelpText>
        <label>ValidFrom</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__ValidUntil__c</fullName>
        <description>Last day that the commitment is valid if activated.</description>
        <inlineHelpText>Last day that the commitment is valid if activated.</inlineHelpText>
        <label>ValidUntil</label>
        <type>Date</type>
    </fields>
    <label>Commitment</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Active__c</columns>
        <columns>ADvendio__Advertiser__c</columns>
        <columns>ADvendio__Agency__c</columns>
        <columns>ADvendio__Approved__c</columns>
        <columns>ADvendio__Status__c</columns>
        <columns>ADvendio__ValidFrom__c</columns>
        <columns>ADvendio__ValidUntil__c</columns>
        <columns>ADvendio__ClosingDate__c</columns>
        <columns>ADvendio__AdvertiserAgencyRelation__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Commitment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commitments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>